--- a/faq/index.html
+++ b/faq/index.html
@@ -22,6 +22,7 @@ title: Frequently asked questions | Gisto
                         <li><a class="innsite" href="#q5">Do you plan to support / add support for
                             [future-name-here]?</a></li>
                         <li><a class="innsite" href="#q8">Issues, bug reporting and pull and feature requests</a></li>
+                        <li><a class="innsite" href="#q9">How to contact us</a></li>
                     </ul>
                 </nav>
             </div>
@@ -46,9 +47,9 @@ title: Frequently asked questions | Gisto
                 <p>Gisto is using GitHub gist API and communicates directly with Github, no 3rd party server or database
                     involved in gist management. </p>
 
-                <p>However we do use a server for notifications and sharing service, the only data is stored is username
-                    and gist ID and this is to allow gisto to notify user if there are shares waiting for him/her to
-                    accept.
+                <p>However we do use a backend server for "notifications and sharing service", the only data stored is username
+                    and gist ID and this is to allow Gisto to notify user if there are shares waiting for him/her to
+                    accept (fork).
                 </p>
 
                 <p>The server code is in the repository should you wish to run an alternative server.</p>
@@ -73,6 +74,12 @@ title: Frequently asked questions | Gisto
                         href="https://github.com/Gisto/Gisto/issues">issue tracker</a>.
                     Pull requests are also very welcome as well.
                 </p>
+
+                <h2 id="q9">How to contact us</h2>
+
+                <p>Twitter: <a href="https://twitter.com/gistoapp">@gistoapp</a></p>
+                    <p>Email: contact@gistoapp.com</p>
+                    <p>Issue tracker: <a href="https://github.com/Gisto/Gisto/issues">Issue tracker at GitHub</a></p>
 
             </div>
 
