--- a/documentation/index.html
+++ b/documentation/index.html
@@ -87,6 +87,8 @@ title: Documentation | Gisto
                 <pre><span>SHELL</span>gulp</pre>
                 <p>This will switch the file layout to development state, show current version and start the server</p>
 
+                <p><blockquote><i class="icon-info-sign"></i> See <a href="https://github.com/Gisto/Gisto/blob/master/gulpfile.js">gulpfile.js</a> fore more details, usage is documented in comments.</blockquote></p>
+
                 <p><i class="icon-chevron-sign-right"></i> Run the notifications server: (optional)</p>
 
                 <p>Configure the notification server tokens: you will find 2 config file samples, one in the <i>app</i>
