--- a/faq/index.html
+++ b/faq/index.html
@@ -6,7 +6,7 @@ title: Frequently asked questions | Gisto
 
 <h1>F.A.Q.</h1>
 
-<section class="whiter boxes">
+<section class="whiter boxes page-faq">
 
     <div class="w-container content-container">
         <div class="w-row">
