--- a/404.html
+++ b/404.html
@@ -1,58 +1,18 @@
-<!DOCTYPE html>
-<html data-wf-site="524b0c4c20cc877c19000161">
-<head>
-    <meta charset="utf-8">
-    <title>Gisto | Snippets made awesome | Manage your github gists on desktop</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/webflow.css">
-    <link rel="stylesheet" type="text/css" href="css/gisto.webflow.css">
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
-    <script>
-        WebFont.load({
-            google: {
-                families: ["Open Sans:300,400,600,700,800"]
-            }
-        });
-    </script>
-    <script src="js/main.js"></script>
-</head>
-<body>
+---
+layout: default
+name: features
+title: Page not found | Gisto
+---
 
-
-<header class="section header">
-
-    <div class="header">
-        <h1><strong>&lt;/Gisto&gt;</strong></h1>
-    </div>
-
-    <div class="w-container">
-        <div class="w-row">
-            <nav class="w-col w-col-12 w-clearfix nav-column">
-                <a class="nav-link" href="#" target="_self">Home</a>
-                <a class="nav-link" href="#" target="_self">Features</a>
-                <a class="nav-link" href="#" target="_self">Documentation</a>
-                <a class="nav-link" href="#" target="_self">FAQ</a>
-                <a class="nav-link nav-link-download" href="#" target="_self">Download</a>
-            </nav>
-        </div>
-    </div>
-</header>
-
+<h1>404</h1>
 
 <section class="whiter boxes">
 
-    <h2>Ooops! Error code <b>404</b>: Page not found</h2>
+
+    <div class="w-container main content-container txt-center">
+
+            <p>Ooops! Error code <b>404</b>: Page not found</p>
+
+    </div>
 
 </section>
-
-<div class="push"></div>
-<footer class="whiter">
-    <p>(c) 2013 Gisto</p>
-</footer>
-
-</body>
-</html>
