FIX (yaml): change page variables
- change page variable due to some kind of reserved var issue

MORE INFO: In local - `page.name` var was not usable, changed to `page.page_name` instead

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-name: home
+page_name: home
 title: Gisto | Snippets made awesome | Manage your github gists on desktop
 ---
 
