--- a/changelog/index.html
+++ b/changelog/index.html
@@ -16,6 +16,7 @@ title: Changelog | Gisto
     <h2>VERSIONS</h2>
     <nav>
         <ul>
+            <li><a class="innsite" href="#v025b">v0.2.5b</a></li>
             <li><a class="innsite" href="#v024b">v0.2.4b</a></li>
             <li><a class="innsite" href="#v023b">v0.2.3b</a></li>
             <li><a class="innsite" href="#v022b">v0.2.2b</a></li>
@@ -28,6 +29,49 @@ title: Changelog | Gisto
 </div>
 
 <div class="w-col w-col-9 w-clearfix main">
+
+<h2 id="v025b">0.2.5b</h2>
+
+<ul class="icons-ul">
+
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FEATURE (settings): add export/import of user settings
+    </li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FEATURE (settings): add export/import of user settings
+    </li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FEATURE (single gist): show fork info if gist is forked
+    </li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FEATURE (share gist): add auto-completion to share gist
+    </li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FEATURE (editor): add preview of markdown</li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> UI (big files): add indication of big file</li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> UI (css): add markdown css</li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> UI (css): update text fields to reflect valid/invalid
+        state
+    </li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FIX (editor): fix font size settings issue</li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FIX (dotfiles in gist): fix links of dotfiles</li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FIX (gist API): gisto fail to handle files >1MB</li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FIX (deleting a file): local copies of files now
+        properly delete when not yet saved to GitHub
+    </li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FIX (drag & drop): drag area disappears on drag cancel
+    </li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FIX: Files that do not exist in github do not send a
+        patch request upon deletion.
+    </li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FIX: Fix not being able to save when there is an empty
+        file in create screen.
+    </li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FIX (single gist): notify upon Error when creating gist
+        + validate filename with regex.
+    </li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FIX (single gist): URLs of gist API for single gist
+        view.
+    </li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FIX (single gist): #81 where username was incorrectly
+        pulled from json causing gist file url appear with no username parameter thus double slash.
+    </li>
+</ul>
 
 <h2 id="v024b">0.2.4b</h2>
 
