--- a/changelog/index.html
+++ b/changelog/index.html
@@ -16,6 +16,7 @@ title: Changelog | Gisto
     <h2>VERSIONS</h2>
     <nav>
         <ul>
+            <li><a class="innsite" href="#v026b">v0.2.6b</a></li>
             <li><a class="innsite" href="#v025b">v0.2.5b</a></li>
             <li><a class="innsite" href="#v024b">v0.2.4b</a></li>
             <li><a class="innsite" href="#v023b">v0.2.3b</a></li>
@@ -29,6 +30,16 @@ title: Changelog | Gisto
 </div>
 
 <div class="w-col w-col-9 w-clearfix main">
+
+<h2 id="v026b">0.2.6b</h2>
+<ul class="icons-ul">
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FEATURE (editor): add vim mode</li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FIX (create gist): Fix text overflowing from the description field</li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FIX (single gist): wrong direct link for uppercase characters in filename or extension</li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FIX (editor): paste now updates correctly in the angular file model</li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FIX (edit mode): Edit mode is now canceled upon route change</li>
+    <li class="icons-li"><i class="icon-chevron-sign-right"></i> FIX (Open file in browser): Open file in browser is now opening correctly</li>
+</ul>
 
 <h2 id="v025b">0.2.5b</h2>
 
