--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page_name: home
-title: Gisto | Snippets made awesome | Manage your github gists on desktop
+title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github gists on desktop
 ---
 
 <section class="whiter boxes features-boxes">
