ADD: other install options
- brew cask
- archlinux AUR

--- a/download/index.html
+++ b/download/index.html
@@ -18,6 +18,7 @@ title: Downloads | Gisto
                     <ul>
                         <li><a href="#mirror">Mirror</a></li>
                         <li><a href="#prevs">Previous versions</a></li>
+                        <li><a href="#other">Other install options</a></li>
                     </ul>
                 </nav>
             </div>
@@ -89,6 +90,18 @@ title: Downloads | Gisto
 
 
             </div>
+
+                    <div class="w-col w-col-pull-1 w-col-push-3 w-col-6 w-clearfix">
+                        <h2 id="other">Other install options:</h2>
+
+                        <p>via <b>Homebrew cask</b>:
+                        <pre><span>SHELL</span>$ brew cask install gisto</pre>
+                        </p>
+                        <p>via <b>Archlinux AUR</b>:
+                        <pre><span>SHELL</span>$ yaourt -S gisto</pre>
+                        </p>
+
+                    </div>
 
         </div>
     </div>
