--- a/index.html
+++ b/index.html
@@ -146,6 +146,23 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
                 </a>
 
             </div>
+
+            <div class="w-container">
+                <div class="w-row">
+                    <div class="w-col w-col-pull-1 w-col-push-3 w-col-6 ">
+                        <h2>Other install options:</h2>
+
+                        <p>via <b>Homebrew cask</b>:
+                        <pre><span>SHELL</span>$ brew cask install gisto</pre>
+                        </p>
+                        <p>via <b>Archlinux AUR</b>:
+                        <pre><span>SHELL</span>$ yaourt -S gisto</pre>
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+
             <div class="center-holder">
                 <a href="download/" class="btn bg-grey txt-white btn-center">
                     Mirrors and prev. versions <i class="icon-arrow-right"></i>
@@ -155,6 +172,8 @@ title: Gisto | Snippets made awesome | Manage your github gists on desktop
                     Change log
                 </a>
             </div>
+
+
         </div>
     </div>
 </section>
