UPDATE: add nightly builds info
- add nightly builds info

--- a/download/index.html
+++ b/download/index.html
@@ -17,6 +17,7 @@ title: Downloads | Gisto
                 <nav>
                     <ul>
                         <li><a href="#mirror">Mirror</a></li>
+                        <li><a href="#nightly">Nightly builds</a></li>
                         <li><a href="#prevs">Previous versions</a></li>
                         <li><a href="#other">Other install options</a></li>
                     </ul>
@@ -71,6 +72,14 @@ title: Downloads | Gisto
 
 
                 </div>
+
+                <h2 id="nightly">"Nightly" builds</h2>
+
+                <p>Gisto "nightly" builds are automatic builds triggered by commits to "master" branch.</p>
+
+                <blockquote>Please note that these are not stable releases. <br>Bugs are possible. Those builds lacks the usual installers you may get in the regular releases.</blockquote>
+
+                <p>"Nightly" builds for all platforms are available at: <a href="{{ site.nightly_url }}">build.gistoapp.com</a></p>
 
 
                 <h2 id="prevs">Previous versions</h2>
