--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
                     Mirrors and prev. versions <i class="icon-arrow-right"></i>
                 </a>
 
+                <a href="{{ site.nightly_url }}" class="btn bg-grey txt-white btn-center">
+                    "Nightly" builds <i class="icon-arrow-right"></i>
+                </a>
+
                 <a href="changelog/" class="btn bg-grey txt-white btn-center">
                     Change log
                 </a>
