--- a/documentation/index.html
+++ b/documentation/index.html
@@ -40,7 +40,9 @@ title: Documentation | Gisto
                 <h2 id="publicprivate">Change gist state secret / public</h2>
 
                 <p>Gist state can be changed from "secret" to public and vise-versa via the <i class="icon-lock"></i> or <i class="icon-unlock"></i> on the top panel when viewing gist.</p>
-                <p><blockquote>Note! That all comments and revisions of this gist will be lost upon this action.</blockquote></p>
+                <p><blockquote>Note! That all comments and revisions of this gist will be lost upon this action.
+            <br><small><b>Update:</b> recently GitHub added this functionality via web interface (with no data loss),
+                but it is not yet available to use via Gist API.</small></blockquote></p>
 
                 <h2 id="sharing">Sharing gists between Gisto users</h2>
 
@@ -78,28 +80,39 @@ title: Documentation | Gisto
 
                 <p><i class="icon-chevron-sign-right"></i> Clone the latest source with the following command to a
                     directory of your choice:</p>
-                <pre><span>SHELL</span>git clone https://github.com/Gisto/Gisto.git</pre>
+                <pre><span>SHELL</span>git clone --recursive https://github.com/Gisto/Gisto.git</pre>
+
                 <p><i class="icon-chevron-sign-right"></i> Enter into the newly created directory:</p>
+
                 <pre><span>SHELL</span>cd Gisto</pre>
+
                 <p><i class="icon-chevron-sign-right"></i> Run:</p>
+
                 <pre><span>SHELL</span>npm install</pre>
-                <p>this will install all necessary dependencies.</p>
 
-                <p><i class="icon-chevron-sign-right"></i> Run:</p>
-                <pre><span>SHELL</span>gulp dev</pre>
-                <p>This will switch the file layout to development state (all files are concatenated)</p>
-
-                <p class="center-holder"> - or - </p>
-                <pre><span>SHELL</span>gulp</pre>
-                <p>This will switch the file layout to development state, show current version and start the server</p>
+                <p>this will install all necessary npm and bower dependencies.</p>
 
                 <p><blockquote>See <a href="https://github.com/Gisto/Gisto/blob/master/gulpfile.js">gulpfile.js</a> fore more details, usage is documented in comments.</blockquote></p>
+
+                <p><i class="icon-chevron-sign-right"></i> Create app <b>config.json</b> (example can be found <a href="https://github.com/Gisto/Gisto/blob/master/app/config.json.sample">here</a>)</p>
+
+                <pre><span>JSON</span>{
+    "server_token": "",
+    "client_id":"",
+    "client_secret":""
+}</pre>
+
+                <p>This needed in order to use GitHub Gist API (<a href="https://github.com/settings/applications/new">Register a new OAuth application</a>)</p>
+
+                <p><i class="icon-chevron-sign-right"></i> Run Gisto</p>
+
+                <pre><span>SHELL</span>/path/to/node-webkit/nw ./app</pre>
 
                 <p><i class="icon-chevron-sign-right"></i> Run the notifications server: (optional)</p>
 
                 <p>Configure the notification server tokens: you will find 2 config file samples, one in the <i>app</i>
-                    directory and another in the <i>server</i> directory.
-                    Fill in a random token which matches in both files (This is used for client authentication)</p>
+                    directory (mentioned above) and another in the <i>server</i> directory.
+                    Fill in a random "server_token" which matches in both files (This is used for client authentication)</p>
 
                 <p>Start a mongoDB instance</p>
 
@@ -114,8 +127,17 @@ title: Documentation | Gisto
                 <p>Or you may optionally run using node-webkit directly on the app directory using the <a
                         target="_blank" href="https://github.com/rogerwang/node-webkit/wiki/How-to-run-apps">Following
                     instructions from node-webkit</a></p>
-                <h4><b>Congratulations!</b> If all went well, you are now running local version of Gisto in your
+                <h4><b>Congratulations!</b> If all went well, you are now have set-up local version of Gisto in your
                     machine.</h4>
+
+                <h2>Build</h2>
+
+                <p><i class="icon-chevron-sign-right"></i> Change to build directory:</p>
+                <pre><span>SHELL</span>cd build/script</pre>
+
+                <p><i class="icon-chevron-sign-right"></i> Execute the build script:</p>
+                <pre><span>SHELL</span>./node-webkit-build.sh --build</pre>
+
             </div>
 
 
