--- a/documentation/index.html
+++ b/documentation/index.html
@@ -139,7 +139,14 @@ title: Documentation | Gisto
                 <pre><span>SHELL</span>./build/script/node-webkit-build.sh --help</pre>
                 
                 <p><i class="icon-chevron-sign-right"></i> Execute the build script:</p>
-                <pre><span>SHELL</span>./build/script/node-webkit-build.sh --src=$DRONE_BUILD_DIR/dist --name=gisto --win-icon=$DRONE_BUILD_DIR/app/icon.ico --osx-icon=$DRONE_BUILD_DIR/build/resources/osx/gisto.icns --osx-plist=$DRONE_BUILD_DIR/build/resources/osx/Info.plist --build</pre>
+                <pre><span>SHELL</span>./build/script/node-webkit-build.sh \
+                    --src=/PATH-TO-GISTO-PROJECT-ROOT/dist \
+                    --name=gisto \
+                    --win-icon=/PATH-TO-GISTO-PROJECT-ROOT/app/icon.ico \
+                    --osx-icon=/PATH-TO-GISTO-PROJECT-ROOT/build/resources/osx/gisto.icns \
+                    --osx-plist=/PATH-TO-GISTO-PROJECT-ROOT/build/resources/osx/Info.plist \
+                    --build</pre>
+<p><blockquote>Remember to replace "PATH-TO-GISTO-PROJECT-ROOT" with yours.</blockquote></p>
 
             </div>
 
