UI: Fix download boxes UI
- fix download boxes layout as starting from upcoming v0.3.0 - six files
  instead of four will be offered for download.
- Update .gitignore

--- a/index.html
+++ b/index.html
@@ -113,37 +113,29 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
 
             <div class="w-row">
 
-                <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Win_x86.zip"
-                   class="download w-col w-col-3 w-clearfix txt-center">
+                <div class="download w-col w-col-3 w-clearfix txt-center">
                     <p><i class="icon-windows icon-4x"></i></p>
-
                     <h3>Windows<br/> <b>Download</b></h3>
+                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Win_x86.zip"><b>32</b>BIT</a> | <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Win_x86_64.zip"><b>64</b>BIT</a>
+                </div>
 
-                </a>
-
-                <a href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86.dmg"
-                   class="download w-col w-col-3 w-clearfix txt-center">
+                <div class="download w-col w-col-3 w-clearfix txt-center">
                     <p class="txt-center"><i class="icon-apple icon-4x"></i></p>
-
                     <h3>OSX<br/> <b>Download</b></h3>
+                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86.dmg"><b>32</b>BIT</a> | <a href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86_64.dmg"><b>64</b>BIT</a>
+                </div>
 
-                </a>
-
-                <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86_64.tar.gz"
-                   class="download w-col w-col-3 w-clearfix txt-center">
+                <div class="download w-col w-col-3 w-clearfix txt-center">
                     <p class="txt-center"><i class="icon-linux icon-4x"></i></p>
-
                     <h3>Linux 64bit<br/> <b>Download</b></h3>
+                    <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86.zip"><b>32</b>BIT</a> | <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86_64.zip"><b>64</b>BIT</a>
+                </div>
 
-                </a>
-
-                <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86.tar.gz"
-                   class="download w-col w-col-3 w-clearfix txt-center">
-                    <p><i class="icon-linux icon-4x"></i></p>
-
-                    <h3>Linux 32bit<br/> <b>Download</b></h3>
-
-                </a>
+                <div class="download w-col w-col-3 w-clearfix txt-center">
+                    <p><i class="icon-cogs icon-4x"></i></p>
+                    <h3>Nightly builds<br/> <b>Download</b></h3>
+                    <a href="{{ site.nightly_url }}">Build server</a>
+                </div>
 
             </div>
 
@@ -166,10 +158,6 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
             <div class="center-holder">
                 <a href="download/" class="btn bg-grey txt-white btn-center">
                     Mirrors and prev. versions <i class="icon-arrow-right"></i>
-                </a>
-
-                <a href="{{ site.nightly_url }}" class="btn bg-grey txt-white btn-center">
-                    "Nightly" builds <i class="icon-arrow-right"></i>
                 </a>
 
                 <a href="changelog/" class="btn bg-grey txt-white btn-center">
