--- a/download/index.html
+++ b/download/index.html
@@ -38,37 +38,23 @@ title: Downloads | Gisto
 
                 <div class="w-row">
 
-                    <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Win_x86.zip"
-                       class="download w-col w-col-3 w-clearfix txt-center">
-                        <p><i class="icon-windows icon-2x"></i></p>
+                    <div class="download w-col w-col-4 w-clearfix txt-center">
+                        <p><i class="icon-windows icon-4x"></i></p>
+                        <h3>Windows<br/> <b>Download</b></h3>
+                        <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Win_x86.zip"><b>32</b>BIT</a> | <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Win_x86_64.zip"><b>64</b>BIT</a>
+                    </div>
 
-                        <h4>Windows<br/> <b>Download</b></h4>
+                    <div class="download w-col w-col-4 w-clearfix txt-center">
+                        <p class="txt-center"><i class="icon-apple icon-4x"></i></p>
+                        <h3>OSX<br/> <b>Download</b></h3>
+                        <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-OSX_x86.dmg"><b>32</b>BIT</a> | <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-OSX_x86_64.dmg"><b>64</b>BIT</a>
+                    </div>
 
-                    </a>
-
-                    <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-OSX_x86.dmg"
-                       class="download w-col w-col-3 w-clearfix txt-center">
-                        <p class="txt-center"><i class="icon-apple icon-2x"></i></p>
-
-                        <h4>OSX<br/> <b>Download</b></h4>
-
-                    </a>
-
-                    <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Linux_x86.tar.gz"
-                       class="download w-col w-col-3 w-clearfix txt-center">
-                        <p><i class="icon-linux icon-2x"></i></p>
-
-                        <h4>Linux 32bit<br/> <b>Download</b></h4>
-
-                    </a>
-
-                    <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Linux_x86_64.tar.gz"
-                       class="download w-col w-col-3 w-clearfix txt-center">
-                        <p class="txt-center"><i class="icon-linux icon-2x"></i></p>
-
-                        <h4>Linux 64bit<br/> <b>Download</b></h4>
-
-                    </a>
+                    <div class="download w-col w-col-4 w-clearfix txt-center">
+                        <p class="txt-center"><i class="icon-linux icon-4x"></i></p>
+                        <h3>Linux 64bit<br/> <b>Download</b></h3>
+                        <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Linux_x86.zip"><b>32</b>BIT</a> | <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Linux_x86_64.zip"><b>64</b>BIT</a>
+                    </div>
 
 
                 </div>
