ADD(features): add features to /features

--- a/index.html
+++ b/index.html
@@ -10,17 +10,6 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
         <div class="w-row">
 
             <div class="w-col w-col-4 w-clearfix feat">
-                <img alt="Gisto" src="../images/edit.png"/>
-
-                <h3>Rich Editor</h3>
-
-                <p>
-                    Gisto includes Ace a rich code editor for editing your gists on the go
-                    and includes features such as syntax highlighting auto-completion emmet and more.
-                </p>
-            </div>
-
-            <div class="w-col w-col-4 w-clearfix feat">
                 <img src="../images/search.png"/>
 
                 <h3>Search</h3>
@@ -29,6 +18,18 @@ title: Code Snippet Manager | Gisto | Snippets made awesome | Manage your github
                     Gists can be found quickly using our search filter and can be filtered by a gist description, file
                     names, tags and more.
                 </p>
+            </div>
+
+            <div class="w-col w-col-4 w-clearfix feat">
+                <img alt="Gisto" src="../images/regular-and-enterprise-login.png"/>
+
+                <h3>Enterprise mode</h3>
+
+                <p>Enterprise mode in Gisto allows connecting to your github enterprise (on-premise) instead of public
+                    github.</p>
+
+                <p>Gisto works the same as it did until now except for a small subset of features that do not make sense
+                    on GitHub Enterprise.</p>
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
